Fix alignment on Weather loading text

--- a/src/containers/Weather/Weather.scss
+++ b/src/containers/Weather/Weather.scss
@@ -3,7 +3,7 @@
   padding: 0;
 
   .ui-text--loading {
-    margin-top: auto;
+    margin: auto 0;
   }
 
   &-bottom-bar {
